<?xml version="1.0"?>
<package>
  <name>epuck_driver</name>
  <version>0.0.0</version>
  <description>The epuck_driver package</description>

  <maintainer email="josl@mmmi.sdu.dk">josl</maintainer>

  <license>GPLv</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend> 
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export>
</package>
